--- a/public/index.html
+++ b/public/index.html
@@ -759,19 +759,61 @@
         </div>
         <div class="row">
             <div class="col-md-5 col-md-offset-1">
-                <h4>sdf sdf s dfs fdsdf sdf s dfs dfsd fSome first questions</h4>
-                <p>With totally chill answer</p>
+                <h4>When should I RSVP by?</h4>
+                <p>Please reply to your invitation by Thursday, November 21st, 2019</p>
 
-                <h4>Some first questions</h4>
-                <p>With totally chill answer</p>
+                <h4>When should we arrive?</h4>
+                <p>Plan to celebrate with us from Thursday, January 23rd through Saturday, January 25th, 2020.
+                    Family members, please arrive by Tuesday evening, January 21st.
+                </p>
+
+                <h4>Are children invited?</h4>
+                <p>Yes, children are invited. Please indicate attendance on the RSVP.
+                    Let us know if you have little ones joining as we’d like to organize babysitters during the wedding.
+                </p>
+
+                <h4>Will there be transportation to and from the wedding?</h4>
+                <p>Yes, we will organize shuttles to and from the wedding venue and after party.
+
+                   The pickup and drop off will be from the 
+                   <a href="https://www.marriott.com/hotels/travel/hnloa-courtyard-oahu-north-shore/">Courtyard by Marriott Oahu North Shore</a>.
+                </p>
+
+                <h4>What is the wedding dress code?</h4>
+                <p>Cocktail attire with a Hawaiian vibe.</p>
+
+                <h4>Should I avoid any shoes?</h4>
+                <p>The venue is outside in a grassy and slightly hilly area.
+                    Avoid wearing stilettos and other high heels. Remember we’ll be dancing =)</p>
             </div>
           
             <div class="col-md-5 col-md-offset-1">
-                <h4>Other question over heraf a fsda dfs afds afsa fdsa fdsa fda fdse dog</h4>
-                <p>Please RSVP. Do it now.</p>
+                <h4>When should I book my hotel?</h4>
+                <p>Not yet! We’ll follow up in a few days with instructions for reserving from our room block.</p>
 
-                <h4>Some first questions</h4>
-                <p>With totally chill answer</p>
+
+                <h4>What is the Family Day dress code?</h4>
+                <p>Dress code for the day trip is island-casual. Think dresses, shorts,
+                    and comfortable shoes for walking.</p>
+
+                <h4>What is the Activity Day dress code?</h4>
+                <p>Bring your swim trunks and your flippy floppies to the picnic and
+                    appropriate clothing for the activity of your choice.</p>
+
+                <h4>Weather</h4>
+                <p>Oahu in January is very pleasant, with temperatures usually ranging
+                    from a low of 68° F to a high of 78° F. There are often brief showers
+                    in the mid-afternoon. We’ll be watching the weather carefully leading
+                    up to the wedding and will update you as needed.</p>
+
+                <h4>Food allergies/preferences</h4>
+                <p>Dinner at the wedding reception will be buffet-style, and we will
+                    have vegan, gluten-free, and dairy free options. If you have
+                    other food restrictions, please state them in your RSVP.</p>
+
+                <h4>Is there a wedding hashtag?</h4>
+                <p>Please use #HappiLeeEverAfter to tag photos from our wedding.</p>
+
             </div>
         </div>
     </div>
